<resources>
    <string name="app_name">Integrador</string>
    <string name="foto_do_usuario">foto do usuario</string>
    <string name="abrir">Abrir</string>
    <string name="fechar">Fechar</string>

    <!-- do roberto - tela cadastro -->

    <string name="dados_cadastrais">Dados Cadastrais</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="perfil_usu_rio">Perfil Usuário</string>
    <string name="login">Login</string>
    <string name="enviar">Enviar</string>
    <string name="todo">TODO</string>
    <string name="cadastre_se">CADASTRE-SE</string>
    <string name="voltar">Voltar</string>
    <string name="adquira_a_vers_o_premium">ADQUIRA A VERSÃO PREMIUM</string>
    <string name="participa_o_or_amento">Participação Orçamento</string>

    <string name="button_buy">Comprar</string>
    <string name="button_buying">"Processando pagamento..."</string>
    <string name="action_settings">Settings</string>
</resources>
